@@ -24,7 +24,7 @@
 
 G_BEGIN_DECLS
 
-#define HISTORY_FILE ".local/share/clipit/history"
+#define HISTORY_FILE "clipit/history"
 
 /* Set maximum size of one clipboard entry to 1024KB (1MB) 
  * 1024 pages × 2000 characters per page - should be more than enough.
